--- a/insure-landing-page-desktop/stylesheet.css
+++ b/insure-landing-page-desktop/stylesheet.css
@@ -1,3 +1,8 @@
+body{
+    width: 1440px;
+    font-family: Karla;
+}
+
 .attribution{ 
     font-size: 11px;
     text-align: center;
@@ -12,11 +17,36 @@
     align-items: center;
     justify-content: space-around;
     height: 80px;
-    border: 5px solid red;
 }
 
 .navList{
     display: flex;
     list-style: none;
     text-transform: uppercase;
+}
+
+li {
+    font-size: 16px;
+    font-weight: 700;
+    color: gray;
+    padding: 20px;
+    margin-right: 20px;
+}
+
+li a{
+    color: black;
+    text-decoration: none;
+    border: 2px solid black;
+    padding: 10px 20px;
+}
+
+.human{
+    background-color: hsl(256, 26%, 20%);
+    color: white;
+    display: flex;
+}
+
+h1{
+    font-family: 'DM Serif Display';
+    font-weight: 400;
 }
