--- a/insure-landing-page-desktop/stylesheet.css
+++ b/insure-landing-page-desktop/stylesheet.css
@@ -1,6 +1,7 @@
 body{
     width: 1440px;
     font-family: Karla;
+    font-size: 1rem;
 }
 
 .attribution{ 
@@ -26,7 +27,6 @@ body{
 }
 
 li {
-    font-size: 16px;
     font-weight: 700;
     color: gray;
     padding: 20px;
@@ -44,9 +44,58 @@ li a{
     background-color: hsl(256, 26%, 20%);
     color: white;
     display: flex;
+    flex-direction: column;
+    height: 500px;
+    border: 5px solid red
 }
 
+.peopleContainer{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 10%;
+    left: 50%;
+    height: 80%;
+    width: 24%;
+    border: 5px solid orange;
+}
+
+.people{
+    height: 100%;
+}
+
+.introContainer{
+    position: relative;
+    height: 80%;
+    width: 30%;
+    border: 5px solid green;
+}
 h1{
     font-family: 'DM Serif Display';
     font-weight: 400;
+    font-size: 2rem;
+    width: 50%;
+    letter-spacing: 0.09em;
+}
+
+.text1 > p{
+    width: 90%;
+    letter-spacing: 0.09em;
+    line-height: 32px;
+}
+
+.text1 > span{
+    color: white;
+    border: 2px solid white;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    margin-top: 20px;
+}
+
+.text1{
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+    width: 50%;
+    padding: 50px 11%;
 }
