--- a/insure-landing-page-desktop/stylesheet.css
+++ b/insure-landing-page-desktop/stylesheet.css
@@ -161,7 +161,7 @@ h1{
 .howwe{
     display: flex;
     align-items:center;
-    justify-content:space-around;
+    justify-content: space-between;
     background-color: hsl(256, 26%, 20%);
     color: white;
     height: 250px;
@@ -180,23 +180,32 @@ h1{
 
 .swirls{
     height: 100%;
-    width:fit-content;
+    width: fit-content;
+    border: 5px solid red;
 }
 
-.howwe > span{
+.el{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.el > span{
     color: white;
     border: 2px solid white;
     text-transform: uppercase;
     line-height: 100%;
-    padding: 1%;
+    padding: 1.5%;
+    border: 5px solid white;
 }
 
-.howwe > h2{
+.el > h2{
     color: white;
     font-family: 'DM Serif Display';
     font-weight: 400;
-    font-size: 2rem;
-    line-height: 100%;
+    font-size: 2.6rem;
+    width: 38%;
+    letter-spacing: 0.09em;
     border: 5px solid lawngreen;
 }
 
